--- a/src/css/import.css
+++ b/src/css/import.css
@@ -144,31 +144,33 @@ a {
 
 /* line 7, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 body {
-  background: #cfcfcf; }
+  background: #cfcfcf;
+  padding: 50px 50px; }
 
-/* line 11, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 12, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 h2 {
   font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 1.5rem;
-  line-height: 2rem; }
+  font-size: 1.7rem;
+  line-height: 2rem;
+  margin-bottom: 20px; }
 
-/* line 15, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 16, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 h3 {
   font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 1rem;
-  line-height: 2rem; }
+  font-size: 1.3rem; }
 
-/* line 19, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 20, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 p {
   font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 1rem;
-  line-height: 1rem; }
+  font-size: 1.1rem;
+  line-height: 1.5rem; }
 
-/* line 23, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 24, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 img {
-  border-radius: 50%; }
+  border-radius: 50%;
+  width: 100%; }
 
-/* line 27, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 29, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .structure {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -177,16 +179,43 @@ img {
   max-width: 1440px;
   gap: 24px 30px; }
 
-/* line 31, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 33, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .content-structure {
   padding: 30px;
   border-radius: 7px; }
 
-/* line 36, D:/Testimonials-Grid/src/css/sass/_structure.scss */
-.flex {
-  display: flex; }
+/* line 38, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+.bg-absolute {
+  width: 150px;
+  z-index: -1;
+  position: absolute;
+  top: 0%;
+  right: 6%; }
+  /* line 44, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  .bg-absolute .bg {
+    border-radius: 0;
+    width: 100%;
+    border: 0 solid; }
 
-/* line 43, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 51, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+.flex {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px; }
+
+/* line 57, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+.rows {
+  margin-left: 20px; }
+
+/* line 61, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+.opacity-50 {
+  opacity: 50%; }
+
+/* line 65, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+.opacity-70 {
+  opacity: 70%; }
+
+/* line 72, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .daniel h2,
 .daniel h3,
 .daniel p,
@@ -198,21 +227,29 @@ img {
 .patrick p {
   color: white; }
 
-/* line 50, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 79, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .daniel {
+  position: relative;
+  z-index: 2;
   grid-area: daniel;
   background: #7541c8; }
+  /* line 84, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  .daniel img {
+    border: 3px solid #a57bd5; }
 
-/* line 55, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 89, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .jonathan {
   grid-area: jonathan;
   background: #48556a; }
+  /* line 92, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  .jonathan .p-jonathan {
+    max-width: 90%; }
 
-/* line 60, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 97, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .kira,
 .jaenette {
   background: white; }
-  /* line 63, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  /* line 100, D:/Testimonials-Grid/src/css/sass/_structure.scss */
   .kira h2,
   .kira h3,
   .kira p,
@@ -221,17 +258,29 @@ img {
   .jaenette p {
     color: #19212e; }
 
-/* line 70, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 107, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .kira {
   grid-area: kira; }
+  /* line 109, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  .kira .p-kira {
+    max-width: 90%; }
 
-/* line 74, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 114, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .jaenette {
   grid-area: jaenette; }
+  /* line 116, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  .jaenette h2 {
+    max-width: 85%; }
 
-/* line 78, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+/* line 121, D:/Testimonials-Grid/src/css/sass/_structure.scss */
 .patrick {
   grid-area: patrick;
   background: #19212e; }
+  /* line 124, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  .patrick img {
+    border: 3px solid #6c509a; }
+  /* line 127, D:/Testimonials-Grid/src/css/sass/_structure.scss */
+  .patrick .p-patrick {
+    max-width: 97%; }
 
 /*# sourceMappingURL=import.css.map */
