--- a/src/css/import.css
+++ b/src/css/import.css
@@ -1,321 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");
-/* line 1, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-button,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  scroll-behavior: smooth; }
-
-/* HTML5 display-role reset for older browsers */
-/* line 92, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block; }
-
-/* line 105, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-body {
-  line-height: 1; }
-
-/* line 108, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-ol,
-ul {
-  list-style: none; }
-
-/* line 112, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-blockquote,
-q {
-  quotes: none; }
-
-/* line 116, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none; }
-
-/* line 123, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-/* line 128, D:/Testimonials-Grid/src/css/sass/_reset.scss */
-a {
-  text-decoration: none; }
-
-/* line 1, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.structure {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: "daniel daniel jonathan kira" "jaenette patrick patrick kira";
-  margin: 0 auto;
-  max-width: 1440px;
-  gap: 24px 30px; }
-  @media screen and (max-width: 1024px) {
-    /* line 1, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-    .structure {
-      display: flex;
-      width: 100%;
-      flex-direction: column;
-      justify-content: space-around; } }
-
-/* line 5, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.content-structure {
-  padding: 30px;
-  border-radius: 7px; }
-
-/* line 10, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.bg-absolute {
-  width: 150px;
-  z-index: -1;
-  position: absolute;
-  top: 0%;
-  right: 0;
-  transform: translateX(-40px); }
-  @media screen and (max-width: 1024px) {
-    /* line 10, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-    .bg-absolute {
-      width: 145px;
-      transform: translateX(-20px); } }
-  /* line 21, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-  .bg-absolute .bg {
-    border-radius: 0;
-    width: 100%;
-    border: 0 solid; }
-
-/* line 28, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.flex {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px; }
-  @media screen and (max-width: 1024px) {
-    /* line 28, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-    .flex {
-      margin-bottom: 10px; } }
-
-/* line 37, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.rows {
-  margin-left: 20px; }
-
-/* line 41, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.opacity-50 {
-  opacity: 50%; }
-
-/* line 45, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.opacity-70 {
-  opacity: 70%; }
-
-/* line 52, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.daniel h2,
-.daniel h3,
-.daniel p,
-.jonathan h2,
-.jonathan h3,
-.jonathan p,
-.patrick h2,
-.patrick h3,
-.patrick p {
-  color: white; }
-
-/* line 59, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.daniel {
-  position: relative;
-  z-index: 2;
-  grid-area: daniel;
-  background: #7541c8; }
-  /* line 64, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-  .daniel img {
-    border: 3px solid #a57bd5; }
-
-/* line 69, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.jonathan {
-  grid-area: jonathan;
-  background: #48556a; }
-  /* line 72, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-  .jonathan .p-jonathan {
-    max-width: 90%; }
-  @media screen and (max-width: 1024px) {
-    /* line 69, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-    .jonathan {
-      max-width: 100%; } }
-
-/* line 80, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.kira,
-.jaenette {
-  background: white; }
-  /* line 83, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-  .kira h2,
-  .kira h3,
-  .kira p,
-  .jaenette h2,
-  .jaenette h3,
-  .jaenette p {
-    color: #19212e; }
-
-/* line 90, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.kira {
-  grid-area: kira; }
-  @media screen and (max-width: 1024px) {
-    /* line 90, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-    .kira {
-      max-width: 100%; } }
-
-/* line 97, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.jaenette {
-  grid-area: jaenette; }
-  /* line 99, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-  .jaenette h2 {
-    max-width: 85%; }
-
-/* line 104, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-.patrick {
-  grid-area: patrick;
-  background: #19212e; }
-  /* line 107, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-  .patrick img {
-    border: 3px solid #6c509a; }
-  @media screen and (max-width: 1024px) {
-    /* line 104, D:/Testimonials-Grid/src/css/sass/_3-structure.scss */
-    .patrick {
-      max-width: 100%; } }
-
-/* line 1, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-*,
-*:before,
-*:after {
-  box-sizing: border-box; }
-
-/* line 7, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-body {
-  background: #cfcfcf;
-  padding: 50px 50px; }
-  @media screen and (max-width: 1024px) {
-    /* line 7, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-    body {
-      padding: 50px 15px; } }
-
-/* line 15, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-h2 {
-  font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 1.7rem;
-  line-height: 2rem;
-  margin-bottom: 20px; }
-  @media screen and (max-width: 1024px) {
-    /* line 15, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-    h2 {
-      font-family: "Barlow Semi Condensed", sans-serif;
-      font-size: 1.3rem;
-      line-height: 1.8rem; } }
-
-/* line 22, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-h3 {
-  font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 1.3rem;
-  font-size: 1rem; }
-
-/* line 27, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-p {
-  font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 1.1rem;
-  line-height: 1.5rem; }
-
-/* line 31, D:/Testimonials-Grid/src/css/sass/_3-global.scss */
-img {
-  border-radius: 50%;
-  width: 100%; }
-
-/*# sourceMappingURL=import.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,button,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;scroll-behavior:smooth}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:"";content:none}table{border-collapse:collapse;border-spacing:0}a{text-decoration:none}*,*:before,*:after{box-sizing:border-box}body{background:#cfcfcf;padding:50px 50px}@media screen and (max-width: 1024px){body{padding:50px 15px}}h2{font-family:"Barlow Semi Condensed", sans-serif;font-size:1.7rem;line-height:2rem;margin-bottom:20px}@media screen and (max-width: 1024px){h2{font-family:"Barlow Semi Condensed", sans-serif;font-size:1.3rem;line-height:1.8rem}}h3{font-family:"Barlow Semi Condensed", sans-serif;font-size:1.3rem;font-size:1rem}p{font-family:"Barlow Semi Condensed", sans-serif;font-size:1.1rem;line-height:1.5rem}img{border-radius:50%;width:100%}.structure{display:grid;grid-template-columns:repeat(4, 1fr);grid-template-areas:"daniel daniel jonathan kira" "jaenette patrick patrick kira";margin:0 auto;max-width:1440px;gap:24px 30px}@media screen and (max-width: 1024px){.structure{grid-template-columns:100%;grid-template-areas:"daniel" "jonathan" "jaenette" "patrick" "kira"}}.content-structure{padding:30px;border-radius:7px}.bg-absolute{width:150px;z-index:-1;position:absolute;top:0%;right:0;transform:translateX(-40px)}@media screen and (max-width: 1024px){.bg-absolute{width:145px;transform:translateX(-20px)}}.bg-absolute .bg{border-radius:0;width:100%;border:0 solid}.flex{display:flex;align-items:center;margin-bottom:20px}@media screen and (max-width: 1024px){.flex{margin-bottom:10px}}.rows{margin-left:20px}.opacity-50{opacity:50%}.opacity-70{opacity:70%}.daniel h2,.daniel h3,.daniel p,.jonathan h2,.jonathan h3,.jonathan p,.patrick h2,.patrick h3,.patrick p{color:#fff}.daniel{position:relative;z-index:2;grid-area:daniel;background:#7541c8}.daniel img{border:3px solid #a57bd5}.jonathan{grid-area:jonathan;background:#48556a}.jonathan .p-jonathan{max-width:90%}@media screen and (max-width: 1024px){.jonathan{max-width:100%}}.kira,.jaenette{background:#fff}.kira h2,.kira h3,.kira p,.jaenette h2,.jaenette h3,.jaenette p{color:#19212e}.kira{grid-area:kira}@media screen and (max-width: 1024px){.kira{max-width:100%}}.jaenette{grid-area:jaenette}.jaenette h2{max-width:85%}.patrick{grid-area:patrick;background:#19212e}.patrick img{border:3px solid #6c509a}@media screen and (max-width: 1024px){.patrick{max-width:100%}}
